fix:navbar align to right

--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -1,31 +1,56 @@
+:root {
+    --background: #FCFBF4;
+    --navbackground: rgba(0, 0, 0, 0.9);
+}
 body{
-    background-color: bisque;
+    background-color: var(--background);
+    padding: 0%;
 }
 .home{
     height: max-content;
-    padding: 10px 15px;
+    padding: 80px 150px;
+}
+.home h1 {
+    font-family: "Radio Canada Big", sans-serif;
+    font-size: 50px;
+    font-weight: 700;
 }
 .home p {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
     font-size: 30px;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: #333;
+    background-color: var(--navbackground);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
     overflow: hidden;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: left;
-    display: block;
     color: #f2f2f2;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
 }
+/* #index {order: 6;}
+#securemessage {order: 5;}
+#hashid {order: 4;}
+#passwordleak {order: 3;}
+#emailleak {order: 2;}
+#help {order: 1;} */
+
+/* .topnav a:first-child{
+} */
 
 /* Change the color of links on hover */
 .topnav a:hover {
@@ -35,7 +60,7 @@ body{
 
 /* Add an active class to highlight the current page */
 .topnav a.active {
-    background-color: #032142;
+    background-color: rgba(0, 13, 61, 0.9);
     color: white;
 }
 
@@ -45,7 +70,16 @@ body{
 }
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 970px) {
-    .topnav a:not(:first-child) {display: none;}
+    .home{
+        padding: 50px 30px;
+    }
+    .home p {
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 18px;
+    }
+    .topnav a:not(:first-child) {
+        display: none;
+    }
     .topnav a.icon {
     float: right;
     display: block;
@@ -54,7 +88,11 @@ body{
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 970px) {
-    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+        position: fixed;
+        width: 100%;
+        right: 0;
+    }
     .topnav.responsive a.icon {
     position: absolute;
     right: 0;
@@ -72,7 +110,7 @@ body{
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding-top: 20px;
+    padding-top: 250px;
 }
 .form input {
     width: max-content;
